# token-acl-cli

./: Cargo.toml  Makefile  README.md
scripts/: write-program-to-surfnet.sh
src/: cli.rs  lib.rs  main.rs  rpc.rs  signer.rs
src/commands/: acl.rs  alt.rs  close_wallet_entries.rs  close_wallet_entry.rs  create_list.rs  create_mint.rs  create_wallet_entry.rs  delete_list.rs  mint.rs  mod.rs
