[package]
name = "gated-mint-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
solana-commitment-config = "^3"
solana-pubkey = "^3"
solana-pubkey-v2 = { package = "solana-pubkey", version = "2.3.0", features = ["curve25519", "borsh"] }
solana-keypair = "^3"
solana-instruction = "^3"
solana-instruction-v2 = { package = "solana-instruction", version = "=2.3.3", features = ["std"] }
solana-program-option = "^3"
solana-program-pack = "^3"
solana-rpc-client-api = "^3"
solana-transaction = "^3"
solana-account-decoder-client-types = "^3"
solana-system-interface = "^3"
spl-token-2022-interface = "^2"
spl-token-metadata-interface = "0.8"
solana-rpc-client = "^3"
spl-associated-token-account = "^8"

token-acl-interface = { version = "0.2.2" }
token-acl-client = { version = "0.2.2", features = ["fetch"] }
token-acl-gate-client = { path = "../../token-acl-gate/sdk/rust" }

tokio = { version = "1.0", features = ["full"] }
serde = "1.0"
bincode = "1.3"
serde_json = "1.0.0"
solana-address-lookup-table-interface = { version = "^3", features = ["bincode"] }
